# C-Vulkan-Triangle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
include/: constants.h  device.h  graphicsPipeline.h  instance.h  renderer.h  swapchain.h  window.h
shaders/: shader.frag  shader.vert  vert.spv
src/: destroy_renderer.c  init_renderer.c  main.c  main_loop.c
src/init_renderer/: create_commands.c  create_framebuffers.c  create_graphic_pipeline.c  create_image_views.c  create_instance.c  create_logical_device.c  create_render_pass.c  create_swapchain.c  create_sync_objects.c  create_vertex_buffer.c  create_window.c  init_renderer.c  pick_physical_device.c  pick_queue_family_indices.c.c
src/utils/: device.c
